--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -47,25 +47,25 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_margin="20dp">
+            android:layout_margin="20dp"
+            android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/profile_my_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="프로필 정보 설정"
-                    android:textColor="#000000"
-                    android:textSize="20sp" />
+            <TextView
+                android:id="@+id/profile_my_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="프로필 정보 설정"
+                android:textColor="#000000"
+                android:textSize="20sp" />
 
 
-                <TextView
-                    android:id="@+id/profile_my_membership"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:text="프로필 사진"
-                    android:textSize="15sp"/>
+            <TextView
+                android:id="@+id/profile_my_membership"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="프로필 사진"
+                android:textSize="15sp" />
 
             <FrameLayout
                 android:layout_width="100dp"
@@ -82,7 +82,7 @@
                     android:id="@+id/profile_profile_img"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
-                    android:visibility="invisible"/>
+                    android:visibility="invisible" />
 
             </FrameLayout>
 
@@ -91,15 +91,16 @@
                 android:id="@+id/upload_profile_image_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center"
                 android:layout_marginTop="20dp"
+                android:gravity="center"
+                android:orientation="horizontal"
                 android:visibility="visible">
+
                 <TextView
                     android:id="@+id/upload_profile_img_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/upload_profile_img"/>
+                    android:text="@string/upload_profile_img" />
             </LinearLayout>
 
 
@@ -107,66 +108,129 @@
                 android:id="@+id/edit_profile_image_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center"
                 android:layout_marginTop="20dp"
+                android:gravity="center"
+                android:orientation="horizontal"
                 android:visibility="gone">
+
                 <TextView
                     android:id="@+id/change_profile_img_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/change_profile_img"
-                    android:layout_marginEnd="20dp"/>
+                    android:layout_marginEnd="20dp"
+                    android:text="@string/change_profile_img" />
 
                 <TextView
                     android:id="@+id/delete_profile_img_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/delete_profile_img"/>
+                    android:text="@string/delete_profile_img" />
             </LinearLayout>
 
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="관심사"
                 android:layout_marginTop="25dp"
-                android:textSize="15sp"/>
+                android:text="관심사"
+                android:textSize="15sp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="최소 5개 이상 관심사를 선택해 주세요."
                 android:layout_marginTop="5dp"
-                android:textSize="13sp"/>
+                android:text="최소 5개 이상 관심사를 선택해 주세요."
+                android:textSize="13sp" />
+
+            <GridLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:columnCount="2"
+                android:orientation="horizontal"
+                android:rowCount="4">
+
+                <CheckBox
+                    android:id="@+id/edit_profile_categoryItems1"
+                    android:text="교육·키즈" />
+
+                <CheckBox
+                    android:id="@+id/edit_profile_categoryItems2"
+                    android:text="패션·잡화·뷰티" />
+
+                <CheckBox
+                    android:id="@+id/edit_profile_categoryItems3"
+                    android:text="홈리빙·디자인소품          " />
+
+                <CheckBox
+                    android:id="@+id/edit_profile_categoryItems4"
+                    android:text="공연·컬쳐" />
+
+                <CheckBox
+                    android:id="@+id/edit_profile_categoryItems5"
+                    android:text="스포츠·모빌리티" />
+
+                <CheckBox
+                    android:id="@+id/edit_profile_categoryItems6"
+                    android:text="출판" />
+
+                <CheckBox
+                    android:id="@+id/edit_profile_categoryItems7"
+                    android:text="반려동물" />
+
+                <CheckBox
+                    android:id="@+id/edit_profile_categoryItems8"
+                    android:text="테크·가전" />
+
+            </GridLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="25dp"
+                android:text="간단한 한 마디로 나를 소개해주세요."
+                android:textSize="15sp" />
+
+            <EditText
+                android:id="@+id/edit_profile_userinfo"
+                android:layout_width="match_parent"
+                android:layout_height="130dp"
+                android:layout_marginTop="10dp"
+                android:paddingTop="5dp"
+                android:background="@drawable/login_edittext_style"
+                android:gravity="top"
+                android:inputType="text"
+                android:imeOptions="actionDone"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="50dp">
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="50dp"
+                android:orientation="horizontal">
 
                 <Button
                     android:id="@+id/edit_profile_cancel_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/edit_profile_btn"
-                    android:text="취소"
                     android:layout_margin="5dp"
-                    android:textColor="#ffffff"
                     android:layout_weight="1"
-                    android:stateListAnimator="@null" />
+                    android:background="@drawable/edit_profile_btn"
+                    android:stateListAnimator="@null"
+                    android:text="취소"
+                    android:textColor="#ffffff"/>
 
                 <Button
                     android:id="@+id/edit_profile_ok_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/edit_profile_ok_btn"
-                    android:text="확인"
                     android:layout_margin="5dp"
-                    android:textColor="#ffffff"
                     android:layout_weight="1"
-                    android:stateListAnimator="@null"/>
+                    android:background="@drawable/edit_profile_ok_btn"
+                    android:stateListAnimator="@null"
+                    android:text="확인"
+                    android:textColor="#ffffff"
+                    android:layout_marginBottom="50dp"/>
             </LinearLayout>
 
         </LinearLayout>
